Fix footer overlap

--- a/public/styles.css
+++ b/public/styles.css
@@ -166,7 +166,7 @@ h1 {
     justify-content: center;
 
     position: relative;
-    bottom: 105px;
+    bottom: 75px;
     max-width: 100%;
 }
 
